--- a/app/src/main/assets/mypage.html
+++ b/app/src/main/assets/mypage.html
@@ -12,13 +12,16 @@
         here.innerHTML = "Hello, " + name;
     }
 
-    function test3(){
+     function test3(x, y){
+        var here = document.getElementById("here2");
+        var result = x / y;
+        here.innerHTML = x + " / " + y + " = " + result;
     }
     </script>
 
 </head>
 <input type="button" value="Click Me" onclick="test1()" />
-
+<input type="button" value="for test3" onclick="test3(3,4)" />
 <div id="here" />
 <div id="here2" />
 <div id= "here3" />
