--- a/app/src/main/assets/mypage.html
+++ b/app/src/main/assets/mypage.html
@@ -4,7 +4,7 @@
     <script>
         function  test1(){
         var here = document.getElementById("here");
-        here.innerHTML = "Hello, Brad:" + parseInt(Math.random()*49+1);
+        here.innerHTML = "Hello,DK:" + parseInt(Math.random()*49+1);
     }
 
     function test2(name){
@@ -17,12 +17,15 @@
         var result = x / y;
         here.innerHTML = x + " / " + y + " = " + result;
     }
+    function tes4(){
+    brad.showMesg("DK:" + parseInt(Math.random()*49+1));
+    }
     </script>
 
 </head>
+<a href='page2.html'>Page 2</a>
 <input type="button" value="Click Me" onclick="test1()" />
 <input type="button" value="for test3" onclick="test3(3,4)" />
-<div id="here" />
-<div id="here2" />
-<div id= "here3" />
+<div id="here"></div>
+<div id="here2"></div>
 </html>
