--- a/app/src/main/assets/mypage.html
+++ b/app/src/main/assets/mypage.html
@@ -18,14 +18,21 @@
         here.innerHTML = x + " / " + y + " = " + result;
     }
     function tes4(){
-    brad.showMesg("DK:" + parseInt(Math.random()*49+1));
+    DK.showMesg("DK:" + parseInt(Math.random()*49+1));
     }
+
+    function gotoPage2(){
+        DK.p2();
+    }
+
     </script>
 
 </head>
 <a href='page2.html'>Page 2</a>
 <input type="button" value="Click Me" onclick="test1()" />
 <input type="button" value="for test3" onclick="test3(3,4)" />
+<input type="button" value="for test4" onclick="test4()" /><br />
+<input type="button" value="goto Page2" onclick="gotoPage2()" /><br />
 <div id="here"></div>
 <div id="here2"></div>
 </html>
