--- a/app/src/main/assets/page2.html
+++ b/app/src/main/assets/page2.html
@@ -16,6 +16,17 @@ function initMap() {
     zoom: 8
   });
 }
+
+
+  map.addListener("click", function(e){
+        var lat = e.latLng.lat();
+        var lng = e.latLng.lng();
+        brad.getLatLng(lat, lng);
+        //alert(lat + ' : ' + lng);
+  });
+}
+
+
 function moveMap(newLat, newLng){
     map.setCenter({lat:newLat, lng:newLng});
 }
